[B]Version 0.3.2[/B]
- Updated: icon (thx freezy/f3k)
- Added: hungarian summary & description
- Added: hungarian strings
- Changed: end line characters (thx spiff)


[B]Version 0.3.1[/B]

- Changed: svn url
- Added: changelog.txt and license.txt


[B]Version 0.3.0[/B]

- Changed: plugin to work with the new add-on system
- Updated: fixed utf-8 encoding problem for ubuntu/linux users (hopefully)