@@ -2,26 +2,44 @@
 <!-- English strings.xml by bootsy (bootsycollins82@gmail.com) -->
 <strings>
     <!-- Main -->
-    <string id="1010">New additions</string>
-    <string id="1020">Browse by country</string>
-    <string id="1030">Browse by genre</string>
+    <string id="30000">New additions</string>
+    <string id="30001">Browse by country</string>
+    <string id="30002">Browse by genre</string>
+    <string id="30003">Browse by favorites</string>
+    
+    <!-- Context -->
+    <string id="30004">Add favorite</string>
+    <string id="30005">Delete favorite</string>
+    <string id="30006">Delete all favorites</string>
+    
+    <!-- Favorites -->
+    <string id="30007">Favorite added!</string>
+    <string id="30008">Favorite NOT added!</string>
+    <string id="30009">Delete favorite?</string>
+    <string id="30010">Favorite deleted!</string>
+    <string id="30011">Favorite NOT deleted!</string>
+    <string id="30012">Delete all favorites?</string>
+    <string id="30013">All favorites deleted!</string>
+    <string id="30014">Favorites NOT deleted!</string>
+    <string id="30015">Favorite already exists.</string>
+    <string id="30016">No other favorites available.</string>
+    <string id="30017">No favorites available.</string>
 
-    <!-- Settings -->    
-    <string id="30000"></string>
-    <string id="30001">Show location</string>
-    <string id="30002">Show genre / comment</string>
-    <string id="30003">Show stream rate</string>
-    <string id="30004">Minimum quality (Kbps)</string>
-    <string id="30005">16</string>
-    <string id="30006">24</string>
-    <string id="30007">32</string>
-    <string id="30008">48</string>
-    <string id="30009">56</string>
-    <string id="30010">64</string>
-    <string id="30011">96</string>
-    <string id="30012">112</string>
-    <string id="30013">128</string>
-    <string id="30014">160</string>
-    <string id="30015">196</string>
-    <string id="30016">256</string>
+    <!-- Settings -->
+    <string id="30020">Show location</string>
+    <string id="30021">Show genre / comment</string>
+    <string id="30022">Show stream rate</string>
+    <string id="30023">Minimum quality (Kbps)</string>
+    <string id="30024">16</string>
+    <string id="30025">24</string>
+    <string id="30026">32</string>
+    <string id="30027">48</string>
+    <string id="30028">56</string>
+    <string id="30029">64</string>
+    <string id="30030">96</string>
+    <string id="30031">112</string>
+    <string id="30032">128</string>
+    <string id="30033">160</string>
+    <string id="30034">196</string>
+    <string id="30035">256</string>
 </strings>
