@@ -1,26 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <strings> <!--  13.4.2009 Finnish   -->
     <!-- Main -->
-    <string id="1010">Viimeksi lisätyt</string>
-    <string id="1020">Selaa maittain</string>
-    <string id="1030">Selaa lajityypeittäin</string>
+    <string id="30000">Viimeksi lisätyt</string>
+    <string id="30001">Selaa maittain</string>
+    <string id="30002">Selaa lajityypeittäin</string>
 
     <!-- Settings -->    
-    <string id="30000"></string>
-    <string id="30001">Näytä sijainti</string>
-    <string id="30002">Näytä lajityyppi / kommentti</string>
-    <string id="30003">Näytä tietovirran arvo</string>
-    <string id="30004">Minimi äänenlaatu (Kbps)</string>
-    <string id="30005">16</string>
-    <string id="30006">24</string>
-    <string id="30007">32</string>
-    <string id="30008">48</string>
-    <string id="30009">56</string>
-    <string id="30010">64</string>
-    <string id="30011">96</string>
-    <string id="30012">112</string>
-    <string id="30013">128</string>
-    <string id="30014">160</string>
-    <string id="30015">196</string>
-    <string id="30016">256</string>
+    <string id="30020">Näytä sijainti</string>
+    <string id="30021">Näytä lajityyppi / kommentti</string>
+    <string id="30022">Näytä tietovirran arvo</string>
+    <string id="30023">Minimi äänenlaatu (Kbps)</string>
+    <string id="30024">16</string>
+    <string id="30025">24</string>
+    <string id="30026">32</string>
+    <string id="30027">48</string>
+    <string id="30028">56</string>
+    <string id="30029">64</string>
+    <string id="30030">96</string>
+    <string id="30031">112</string>
+    <string id="30032">128</string>
+    <string id="30033">160</string>
+    <string id="30034">196</string>
+    <string id="30035">256</string>
 </strings>
