@@ -2,26 +2,25 @@
 <!-- Hungarian strings.xml by Attila Jakosa (attila.jakosa@gmail.com) -->
 <strings>
     <!-- Main -->
-    <string id="1010">Új rádiók a listán</string>
-    <string id="1020">Tallózás ország szerint</string>
-    <string id="1030">Tallózás stílus szerint</string>
+    <string id="30000">Új rádiók a listán</string>
+    <string id="30001">Tallózás ország szerint</string>
+    <string id="30002">Tallózás stílus szerint</string>
 
     <!-- Settings -->
-    <string id="30000"></string>
-    <string id="30001">Hely mutatása</string>
-    <string id="30002">Stílus / megjegyzés mutatása</string>
-    <string id="30003">Adatfolyamsűrűség mutatása</string>
-    <string id="30004">Minimális minőség (Kbps)</string>
-    <string id="30005">16</string>
-    <string id="30006">24</string>
-    <string id="30007">32</string>
-    <string id="30008">48</string>
-    <string id="30009">56</string>
-    <string id="30010">64</string>
-    <string id="30011">96</string>
-    <string id="30012">112</string>
-    <string id="30013">128</string>
-    <string id="30014">160</string>
-    <string id="30015">196</string>
-    <string id="30016">256</string>
+    <string id="30020">Hely mutatása</string>
+    <string id="30021">Stílus / megjegyzés mutatása</string>
+    <string id="30022">Adatfolyamsűrűség mutatása</string>
+    <string id="30023">Minimális minőség (Kbps)</string>
+    <string id="30024">16</string>
+    <string id="30025">24</string>
+    <string id="30026">32</string>
+    <string id="30027">48</string>
+    <string id="30028">56</string>
+    <string id="30029">64</string>
+    <string id="30030">96</string>
+    <string id="30031">112</string>
+    <string id="30032">128</string>
+    <string id="30033">160</string>
+    <string id="30034">196</string>
+    <string id="30035">256</string>
 </strings>
