@@ -1,5 +1,11 @@
+[B]Version 0.4.0[/B]
+
+- Added: favorite list and management
+
+
 [B]Version 0.3.2[/B]
-- Updated: icon (thx freezy/f3k)
+
+- Updated: icon (thx freezy)
 - Added: hungarian summary & description
 - Added: hungarian strings
 - Changed: end line characters (thx spiff)
